--- a/app/src/main/res/layout/fragment_instrument_details.xml
+++ b/app/src/main/res/layout/fragment_instrument_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,11 +21,14 @@
         <com.apisov.percusoid.ui.instrumentdetails.SensorGraph
             android:id="@+id/graph"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:background="@color/graphBackground"
-            app:layout_constraintTop_toBottomOf="@+id/btnSaveInstrument" />
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintTop_toBottomOf="@+id/toolbarBackgroundView" />
 
         <View
+            android:id="@+id/toolbarBackgroundView"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:background="?colorPrimary"
@@ -58,7 +62,6 @@
             android:id="@+id/btnSaveInstrument"
             android:layout_width="0dp"
             android:layout_height="?actionBarSize"
-            android:layout_marginEnd="@dimen/content_margin"
             android:background="?android:selectableItemBackground"
             android:contentDescription="@string/save_instrument"
             android:onClick="@{() -> viewModel.onSaveClicked()}"
@@ -66,11 +69,12 @@
             android:paddingStart="@dimen/horizontal_margin"
             android:text="@string/save"
             android:visibility="@{viewModel.instrument.id == null ? View.VISIBLE : View.GONE}"
-            app:layout_constraintRight_toLeftOf="@id/btnDeleteInstrument"
+            app:layout_constraintRight_toRightOf="parent"
             app:srcCompat="@drawable/ic_save_white_24dp" />
 
         <ImageView
             android:id="@+id/btnDeleteInstrument"
+            tools:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="?actionBarSize"
             android:background="?android:selectableItemBackground"
@@ -86,6 +90,8 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:paddingTop="@dimen/horizontal_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +104,7 @@
 
                 <TextView
                     style="@style/InstrumentConfigTitle"
+                    android:layout_marginTop="0dp"
                     android:text="@string/title_sensor_sensitivity" />
 
                 <SeekBar
