--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,10 @@
     <style name="InstrumentConfigTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginTop">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginBottom">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginEnd">@dimen/horizontal_margin</item>
         <item name="android:textSize">24sp</item>
         <item name="fontFamily">@font/ubuntu_light</item>
 
