--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add"
+            app:srcCompat="@drawable/ic_add"
             app:fabSize="normal"
             app:layout_anchor="@id/fragment_container"
             app:layout_anchorGravity="bottom|right|end" />
